--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -55,8 +55,7 @@
     <div fxFlex>
         <h2>Corporate Leadership</h2>
         <div class="container" fxLayout="column" fxLayoutGap="10px">
-
-            <mat-list fxFlex>
+            <mat-list fxFlex *ngIf="leaders">
                 <mat-list-item *ngFor="let leader of leaders">
                     <img matListAvatar src={{leader.image}} alt={{leader.name}}>
                     <p matLine> {{leader.name}} </p>
@@ -66,7 +65,10 @@
                     </p>
                 </mat-list-item>
             </mat-list>
-
+            <div [hidden]="leaders">
+                <mat-spinner></mat-spinner>
+                <h4>Loading . . . Please Wait</h4>
+            </div>
         </div>
     </div>
 </div>
