--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -19,6 +19,10 @@
                 </mat-card-actions>
             </mat-card>
         </div>
+        <div [hidden]="dish">
+            <mat-spinner></mat-spinner>
+            <h4>Loading . . . Please Wait</h4>
+        </div>
     </div>
 
     <div fxFlex="40">
@@ -39,6 +43,10 @@
                     </mat-list>
                 </mat-card-content>
             </mat-card>
+        </div>
+        <div [hidden]="dish">
+            <mat-spinner></mat-spinner>
+            <h4>Loading . . . Please Wait</h4>
         </div>
     </div>
 
