--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,8 +13,12 @@
             </p>
         </mat-card-content>
     </mat-card>
+    <div [hidden]="dish">
+        <mat-spinner></mat-spinner>
+        <h4>Loading . . . Please Wait</h4>
+    </div>
 
-    <mat-card *ngIf="promotion" fxFlex>
+    <mat-card fxFlex *ngIf="promotion">
         <mat-card-header>
             <div mat-card-avatar></div>
             <mat-card-title>
@@ -27,6 +31,10 @@
             </p>
         </mat-card-content>
     </mat-card>
+    <div [hidden]="promotion">
+        <mat-spinner></mat-spinner>
+        <h4>Loading . . . Please Wait</h4>
+    </div>
 
     <mat-card *ngIf="leader" fxFlex>
         <mat-card-header>
@@ -43,5 +51,9 @@
             </p>
         </mat-card-content>
     </mat-card>
+    <div [hidden]="leader">
+        <mat-spinner></mat-spinner>
+        <h4>Loading . . . Please Wait</h4>
+    </div>
 
 </div>
