--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,7 +1,6 @@
 <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px" fxLayoutGap.xs="0">
-
-    <div fxFlex="40">
-        <div fxFlex *ngIf="dish">
+    <div fxFlex="40" *ngIf="dish">
+        <div fxFlex>
             <mat-card>
                 <mat-card-header>
                     <mat-card-title>
@@ -13,9 +12,12 @@
                     <p>{{dish.description}}</p>
                 </mat-card-content>
                 <mat-card-actions>
+                    <button mat-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
                     <button mat-button (click)="goBack()">BACK</button>
                     <button mat-button>LIKE</button>
                     <button mat-button>SHARE</button>
+                    <span class="flex-spacer"></span>
+                    <button mat-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
                 </mat-card-actions>
             </mat-card>
         </div>
@@ -25,29 +27,56 @@
         </div>
     </div>
 
-    <div fxFlex="40">
-        <div fxFlex *ngIf="dish">
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-title>
-                        <h3> Comments</h3>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <mat-list fxFlex>
-                        <mat-list-item *ngFor="let x of dish.comments">
-                            <p matLine>{{x.comment}}</p>
-                            <p matLine>{{x.rating}} Stars</p>
-                            <p matLine>-- {{x.author}} {{x.date|date}}</p>
-                        </mat-list-item>
-                    </mat-list>
-                </mat-card-content>
-            </mat-card>
-        </div>
-        <div [hidden]="dish">
-            <mat-spinner></mat-spinner>
-            <h4>Loading . . . Please Wait</h4>
+    <div fxFlex="40" *ngIf="dish">
+        <div class="container" fxLayout="row">
+            <div>
+                <div fxFlex>
+                    <mat-card>
+                        <mat-card-header>
+                            <mat-card-title>
+                                <h3> Comments</h3>
+                            </mat-card-title>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <mat-list fxFlex>
+                                <mat-list-item *ngFor="let x of dish.comments">
+                                    <p matLine>{{x.comment}}</p>
+                                    <p matLine>{{x.rating}} Stars</p>
+                                    <p matLine>-- {{x.author}} {{x.date|date}}</p>
+                                </mat-list-item>
+                                <mat-list-item *ngIf="feedbackForm.valid">
+                                    <p matLine>{{feedbackForm.get('comment').value}}</p>
+                                    <p matLine>{{feedbackForm.get('rating').value}} Stars</p>
+                                    <p matLine>-- {{feedbackForm.get('author').value}}</p>
+                                </mat-list-item>
+                            </mat-list>
+                        </mat-card-content>
+                        <div class="form-size">
+                            <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+                                <p>
+                                    <mat-form-field class="half-width">
+                                        <input matInput formControlName="author" placeholder="Name" type="text" required>
+                                        <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+                                    </mat-form-field>
+                                </p>
+                                <mat-slider min="1" max="5" step="1" tickInterval="1" formControlName="rating"></mat-slider>
+                                <p>
+                                    <mat-form-field class="full-width">
+                                        <textarea matInput formControlName="comment" placeholder="Your Comment" rows=8></textarea>
+                                        <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+                                    </mat-form-field>
+                                </p>
+                                <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
+                            </form>
+                        </div>
+                    </mat-card>
+                </div>
+            </div>
+
         </div>
     </div>
-
+    <div [hidden]="dish">
+        <mat-spinner></mat-spinner>
+        <h4>Loading . . . Please Wait</h4>
+    </div>
 </div>
