--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -55,9 +55,9 @@
     <div fxFlex>
         <h2>Corporate Leadership</h2>
         <div class="container" fxLayout="column" fxLayoutGap="10px">
-            <mat-list fxFlex *ngIf="leaders">
+            <mat-list fxFlex *ngIf="leaders" [@expand]>
                 <mat-list-item *ngFor="let leader of leaders">
-                    <img matListAvatar src={{leader.image}} alt={{leader.name}}>
+                    <img matListAvatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>
                     <p matLine> {{leader.name}} </p>
                     <p matLine>{{leader.designation}}</p>
                     <p matLine>
